[package]
name = "astroflux"
version = "0.1.0"
authors = ["Matthew Russell <mbr4477@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas-src = { version = "0.6", features = ["intel-mkl"] }
ndarray = { version = "0.13.0", features = ["blas"] }
ndarray-stats = "0.3.0"
rand = "0.7.3"
image = "0.23.4"
num = "0.2.1"
ndarray-rand = "0.11.0"
argparse = "0.2.2"